--- a/server.cfg
+++ b/server.cfg
@@ -47,10 +47,11 @@ ensure sound
 
 # QBCore & Extra stuff
 ensure qb-core
+ensure qb-target
 ensure [qb]
 ensure [standalone]
 ensure [voice]
-ensure [defaultmaps]
+## ensure [defaultmaps]
 ensure cfx-gabz-mapdata
 ensure cfx-gabz-pdprops
 ensure cfx-gabz-scenarios
@@ -60,17 +61,26 @@ ensure [paid]
 ensure [standalones]
 ensure [engine]
 ensure [vehicles]
-ensure [casino]
+## ensure [casino]
 ensure [weapons]
-## ensure [eup]
-## ensure [busclothing]
-ensure [clothing]
+
+ensure ja_bcso_eup	
+ensure ja_lspd_eup	
+ensure ja_sast_eup
+ensure [eup]
+
+ensure [jim]
+ensure jim-mechanic
+
 ensure [gnstudio]
 ensure [cfx-gabz-maps]
 
-ensure jim-mechanic
+ensure jim-consumables
+
 ensure screenshot-basic
-ensure VersusAC
+ensure CPRPGoods
+
+ensure jim-consumables
 
 ## Permissions ##
 add_ace group.admin command allow # allow all commands
