--- a/qbcore.yaml
+++ b/qbcore.yaml
@@ -693,6 +693,11 @@ tasks:
     ref: master
     src: https://github.com/CPRP/Vehicle-Attachment
     
+  - action: download_github
+    dest: ./resources/[standalone]/progressbar
+    ref: main
+    src: https://github.com/CPRP/progressbar
+    
   # Clean up
   - action: remove_path
     path: ./tmp
