--- a/qbcore.yaml
+++ b/qbcore.yaml
@@ -737,6 +737,11 @@ tasks:
     ref: master
     src: https://github.com/CPRP/interact-sound
     
+  - action: download_github
+    dest: ./resources/[standalone]/devyn-backitems
+    ref: main
+    src: https://github.com/CPRP/devyn-backitems
+    
   # Clean up
   - action: remove_path
     path: ./tmp
