--- a/server.cfg
+++ b/server.cfg
@@ -9,17 +9,21 @@
 {{serverEndpoints}}
 sv_maxclients {{maxClients}}
 set steam_webApiKey "none"
-sets tags "default, deployer, qbcore, qb-core"
+sets tags "default, deployer, qbcore, qb-core, police, roleplay, rp, serious, businesses, ems, firefighter, cars, mods, mechanics, mining, best, new, paradise, criminals, heist, robbery, commuinity, drugs, economy, gangs, custom cars, serious rp, onesync, racing, lspd, bcso, sahp, lsfd, safd, rp, egirl friendly"
 
 ## You MAY edit the following:
 sv_licenseKey "{{svLicense}}"
-sv_hostname "{{serverName}} built with {{recipeName}} by {{recipeAuthor}}!"
-sets sv_projectName "[{{recipeName}}] {{serverName}}"
-sets sv_projectDesc "{{recipeDescription}}"
+sv_hostname "^4Criminal's Paradise RP"
+sets sv_projectName "^4Criminals Paradise RP"
+sets sv_projectDesc "Serious Roleplay. Join Today! Discord on the right ->"
 sets locale "en-US"
 load_server_icon myLogo.png
 set sv_enforceGameBuild 2699
 set mysql_connection_string "{{dbConnectionString}}"
+
+## Media Links:
+sets Discord "https://discord.gg/nnvz7aV8c4"
+sets TikTok "https://www.tiktok.com/@criminalsparadiserp"
 
 # Voice config
 setr voice_useNativeAudio true
@@ -71,6 +75,7 @@ ensure [eup]
 
 ensure [jim]
 ensure jim-mechanic
+ensure jim-crafting
 
 ensure [gnstudio]
 ensure [cfx-gabz-maps]
@@ -85,7 +90,12 @@ ensure jim-consumables
 ## Permissions ##
 add_ace group.admin command allow # allow all commands
 #add_principal identifier.{{principalMasterIdentifier}} qbcore.god <- doesn't exist yet, change the generated one below to qbcore.god
-{{addPrincipalsMaster}}
+add_principal identifier.fivem:3513736 qbcore.god # CPRP_Developer
+add_principal identifier.fivem:5017921 group.admin # Cowboy81787
+add_principal identifier.fivem:5986526 group.admin # Brandinmartinez
+add_principal identifier.fivem:3514810 group.admin # ColtronS
+add_principal identifier.discord:827686053057396746 group.admin # Z Price
+add_principal identifier.discord:756007798919397457 group.admin # Ellie
 
 # Resources
 add_ace resource.qb-core command allow # Allow qb-core to execute commands
@@ -94,15 +104,6 @@ add_ace resource.CPRPGoods command allow # Allows VersusAC
 # Gods
 add_ace qbcore.god command allow # Allow all commands
 add_ace qbcore.admin command allow # Allow Admins to All Commands
-
-# Hypnonema
-add_ace group.admin hypnonema allow
-add_ace group.god hypnonema allow
-add_ace builtin.everyone hypnonema.playback allow
-
-# VersusAC
-add_ace group.admin vacadmin allow
-add_ace group.mod vacadmin allow
 
 # Inheritance
 add_principal qbcore.god group.admin # Allow gods access to the main admin group used to get all default permissions
