--- a/server.cfg
+++ b/server.cfg
@@ -17,7 +17,7 @@ sv_hostname "^4Criminal's Paradise RP"
 sets sv_projectName "^4Criminals Paradise RP"
 sets sv_projectDesc "Serious Roleplay. Join Today! Discord on the right ->"
 sets locale "en-US"
-load_server_icon myLogo.png
+load_server_icon cprplogo.png
 set sv_enforceGameBuild 2699
 set mysql_connection_string "{{dbConnectionString}}"
 
