--- a/qbcore.yaml
+++ b/qbcore.yaml
@@ -205,11 +205,6 @@ tasks:
     src: https://github.com/qbcore-framework/qb-commandbinding
 
   - action: download_github
-    dest: ./resources/[qb]/qb-clothing
-    ref: main
-    src: https://github.com/qbcore-framework/qb-clothing
-
-  - action: download_github
     dest: ./resources/[qb]/qb-hotdogjob
     ref: main
     src: https://github.com/qbcore-framework/qb-hotdogjob
@@ -731,6 +726,11 @@ tasks:
     dest: ./resources/[jim]/jim-consumables
     ref: main
     src: https://github.com/CPRP/jim-consumables
+    
+  - action: download_github
+    dest: ./resources/[qb]/qb-clothing
+    ref: main
+    src: https://github.com/CPRP/qb-clothing
     
   # Clean up
   - action: remove_path
