--- a/server.cfg
+++ b/server.cfg
@@ -7,7 +7,7 @@
 
 ## You CAN edit the following:
 {{serverEndpoints}}
-sv_maxclients {{maxClients}}
+sv_maxclients 64
 set steam_webApiKey "none"
 sets tags "default, deployer, qbcore, qb-core, police, roleplay, rp, serious, businesses, ems, firefighter, cars, mods, mechanics, mining, best, new, paradise, criminals, heist, robbery, commuinity, drugs, economy, gangs, custom cars, serious rp, onesync, racing, lspd, bcso, sahp, lsfd, safd, rp, egirl friendly"
 
@@ -60,8 +60,9 @@ ensure cfx-gabz-mapdata
 ensure cfx-gabz-pdprops
 ensure cfx-gabz-scenarios
 ensure [maps]
-ensure [peds]
-ensure [paid]
+## ensure [peds]
+ensure [paid-scripts]
+ensure [paid-maps]
 ensure [standalones]
 ensure [engine]
 ensure [vehicles]
@@ -94,7 +95,6 @@ add_ace group.admin command allow # allow all commands
 #add_principal identifier.{{principalMasterIdentifier}} qbcore.god <- doesn't exist yet, change the generated one below to qbcore.god
 add_principal identifier.fivem:3513736 qbcore.god # CPRP_Developer
 add_principal identifier.fivem:5017921 group.admin # Cowboy81787
-add_principal identifier.fivem:5986526 group.admin # Brandinmartinez
 add_principal identifier.fivem:3514810 group.admin # ColtronS
 add_principal identifier.discord:827686053057396746 group.admin # Z Price
 add_principal identifier.discord:756007798919397457 group.admin # Ellie
